<resources>
    <string name="app_name">IS</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">HomeS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">IS Confereces</string>
    <string name="nav_header_subtitle">Secretary Version</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_meeting_list">Meetings</string>
    <string name="title_meeting_detail">Meeting Detail</string>
    <string name="title_home">ADD</string>
    <string name="reenter">Re Enter Password</string>
    <string name="npass">Enter New Password</string>
    <string name="opass">Old Password</string>
    <string name="Change">Change Password</string>

</resources>
