<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting">
    <ScrollView
        android:id="@+id/changepass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/colorPrimaryDark">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/opass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/opass"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:outlineAmbientShadowColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent"
                    android:textColorLink="@color/colorAccent"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/npass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/npass"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:outlineAmbientShadowColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent"
                    android:textColorLink="@color/colorAccent"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/repass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reenter"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:outlineAmbientShadowColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent"
                    android:textColorLink="@color/colorAccent"/>

            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/change"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/Change"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>